# bevy_easy_localize

./: Cargo.toml  README.md
examples/: asset.rs  simple.rs  sys_locale.rs  test.csv  text.rs
src/: lib.rs
