[package]
name = "bevy_easy_localize"
version = "0.4.0"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "Lightweight localization in bevy"
homepage = "https://github.com/0crispy/bevy_easy_localize"
repository = "https://github.com/0crispy/bevy_easy_localize"
readme = "README.md"
documentation = "https://docs.rs/bevy_easy_localize"

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "bevy_asset",
    "bevy_text",
    "file_watcher"
]}
csv = "1.2.2"

[dev-dependencies] 
bevy = "0.12"
